# python-project-lvl3

./: .gitignore  Makefile  README.md  auto-ru.html  ok-ru.html  pyproject.toml  test500.py  vk-com.html
auto-ru_files/: auto-ru-captcha_smart-min.css  auto-ru-captcha_smart-min.js  auto-ru-captcha_smart_error-min.js  auto.ru
ok-ru_files/: ok-ru-res-css-prod-core-ncore-1f23b419.css  ok-ru-res-css-prod-core-ncore_postponed-52f5d10c.css  ok-ru-res-css-prod-layout-3f0a2850.css  ok-ru-res-css-prod-login-login-dfc1310c.css  ok-ru-res-css-prod-main-nb-ae0536b9.css  ok-ru-res-css-prod-main-nmain-51ebe5a5.css  ok-ru-res-css-prod-main-nmain_postponed-33d9d41e.css  ok-ru-res-css-prod-smiles-c48a5826.css  ok-ru-res-js-app-BehaviorLogger_dcc631e1.js  ok-ru-res-js-app-DndOverlay_7e8a3071.js  ok-ru-res-js-app-EventFactory_da06a82.js  ok-ru-res-js-app-FAPIClient_9d288290.js  ok-ru-res-js-app-FaviconManager_b1e38ceb.js  ok-ru-res-js-app-FeedExperiments_db8379b2.js  ok-ru-res-js-app-Feed_dd868ed1.js  ok-ru-res-js-app-GiftToFriend_585f5161.js  ok-ru-res-js-app-GoSearch_81e0f7c.js  ok-ru-res-js-app-LikeComponent_1d70837d.js  ok-ru-res-js-app-LogSeen_e7ee31ce.js  ok-ru-res-js-app-MainFeedsNewFeedPush_8f70d224.js  ok-ru-res-js-app-NavigationProgressBar_185e2d66.js  ok-ru-res-js-app-NotificationPermissionPopup_eec6dc5c.js  ok-ru-res-js-app-Notifications_4d589dd1.js  ok-ru-res-js-app-PhotoLayer_9217e258.js  ok-ru-res-js-app-ReactComponent_942df91a.js  ok-ru-res-js-app-ReactIconsWithCounter_44a2c70c.js  ok-ru-res-js-app-SearchInput_22ceb8e6.js  ok-ru-res-js-app-Skrepochka_2ec43d0.js  (+20 more)
(+18 files in other folders)
