[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["mrJonson <mr.Jonson@mail.ru>"]
repository = "https://github.com/mrjonsonDD/python-project-lvl3"
packages = [
  {include = "gendiff" },
]
classifiers = [
    "Topic :: Education"
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.main:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
progress = "^1.6"
beautifulsoup4 = "^4.10.0"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
coverage = "^6.3.2"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
